Revert "This time properly fixed buttons being overlapped by divs"
This reverts commit 00a5634aa529764d5204b11af04c7647868ccf53.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -423,13 +423,8 @@ input[type="text"] {
 }
 
 
-#button-group-top-left {
+#backButton {
 	position: absolute;
-/*	top: 50px;
-	left: 0px;*/
-}
-
-.nav-tabs {
-	/*Remove the bottom border*/
-	border: 0px solid black !important;
+	top: 50px;
+	left: 0px;
 }
